--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,8 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/
+   - assets/
+   - assets/images/
   fonts:
     - family: Poppins
       fonts:
